@@ -5,7 +5,7 @@ source 'http://rubygems.org'
 gem 'rack' #, '1.3.5'
 gem 'rack-cache'
 gem 'rake' #, '0.9.2.2'
-gem 'rails', '3.2.2'
+gem 'rails', '3.2.3'
 gem 'bundler', '>= 1.1.0'
 
 ### Database Adapter
